
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int verbose; int gps; int sensor_mode; int cameraNum; int filename; int height; int width; } ;
typedef TYPE_1__ RASPICOMMONSETTINGS_PARAMETERS ;
 int basename (int ) ;
 int cmdline_commands ;
 int cmdline_commands_size ;
 int display_valid_parameters (int ,void (*) (char*)) ;
 int exit (int ) ;
 int fprintf (int ,char*) ;
 int get_app_name () ;
 int isdigit (char const) ;
 int malloc (int) ;
 int raspicli_get_command_id (int ,int ,char const*,int*) ;
 int sscanf (char const*,char*,int *) ;
 int stderr ;
 char* strchr (char const*,char) ;
 int strlen (char const*) ;
 int strncpy (int ,char const*,int) ;
 int vcos_assert (int ) ;

int raspicommonsettings_parse_cmdline(RASPICOMMONSETTINGS_PARAMETERS *state, const char *arg1, const char *arg2, void (*app_help)(char*))
{
   int command_id, used = 0, num_parameters;

   if (!arg1)
      return 0;

   command_id = raspicli_get_command_id(cmdline_commands, cmdline_commands_size, arg1, &num_parameters);


   if (command_id==-1 || (command_id != -1 && num_parameters > 0 && arg2 == ((void*)0)))
      return 0;

   switch (command_id)
   {
   case 132:
   {
      display_valid_parameters(basename(get_app_name()), app_help);
      exit(0);
      break;
   }
   case 128:
      if (sscanf(arg2, "%u", &state->width) == 1)
         used = 2;
      break;

   case 133:
      if (sscanf(arg2, "%u", &state->height) == 1)
         used = 2;
      break;

   case 131:
   {
      int len = strlen(arg2);
      if (len)
      {

         const char *percent = arg2;

         while(*percent && (percent=strchr(percent, '%')) != ((void*)0))
         {
            int digits=0;
            percent++;
            while(isdigit(*percent))
            {
               percent++;
               digits++;
            }
            if(!((*percent == '%' && !digits) || *percent == 'd'))
            {
               used = 0;
               fprintf(stderr, "Filename contains %% characters, but not %%d or %%%% - sorry, will fail\n");
               break;
            }
            percent++;
         }

         state->filename = malloc(len + 10);
         vcos_assert(state->filename);
         if (state->filename)
            strncpy(state->filename, arg2, len+1);
         used = 2;
      }
      else
         used = 0;
      break;
   }

   case 129:
      state->verbose = 1;
      used = 1;
      break;

   case 135:
   {
      if (sscanf(arg2, "%u", &state->cameraNum) == 1)
         used = 2;
      break;
   }

   case 130:
   {
      if (sscanf(arg2, "%u", &state->sensor_mode) == 1)
         used = 2;
      break;
   }

   case 134:
      state->gps = 1;
      used = 1;
      break;
   }

   return used;
}
